--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- HERO SECTION -->
-    <div class="hero-section">
+    <div class="hero-section container">
       <h1 id="hero-heading">Visit Delhi</h1>
       <h2 id="hero-paragraph">
         India’s capital territory, is a massive metropolitan area in the
@@ -22,7 +22,7 @@
 
     <!-- ACTIVITIES SECTION -->
 
-    <div class="activity-section">
+    <div class="activity-section container">
       <div class="activity-model" id="at-1">
         <img class="ac-img" src="images/historical-places.jpg" />
         <h4>Visit Hisotrical Places</h4>
@@ -52,7 +52,7 @@
     </div>
 
     <!-- GUIDE SECTION -->
-    <div class="guide-section">
+    <div class="guide-section container">
       <div class="guide-card">
         <div class="guide-details">
           <h3>Your guide</h3>
