Must have added this

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,8 +37,8 @@
         <img class="ac-img" src="images/park.jpg" />
         <h4>Have Some Fun</h4>
         <p>
-          Delhi never ran out of cool nature which refreshes mind,
-          body and soul. Must visit Garden of five senses.
+          Delhi never ran out of cool nature which refreshes mind, body and
+          soul. Must visit Garden of five senses.
         </p>
       </div>
 
